--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
+    "mysql2": "^3.5.2",
     "nodemon": "^3.0.1",
+    "sequelize": "^6.32.1",
     "sql": "^0.78.0"
   }
 }
